fix: remove horizontal scroll in sidebar (#652)
Fixes: #651

--- a/src/app/core/shell/sidenav/sidenav.component.scss
+++ b/src/app/core/shell/sidenav/sidenav.component.scss
@@ -4,6 +4,7 @@
     width: 100%;
     height: 100%;
     padding-top: 20%;
+    overflow-x: hidden;
   }
 
   img {
